# rope

./: .gitignore  README.md  flake.nix  pyproject.toml  rope.py
nix/: deepface.nix  lightecc.nix  lightphe.nix
